arma-rs/tests/derive/fail_struct_tuple_default_field_first.rs
use arma_rs::{FromArma, IntoArma};

#[derive(FromArma, IntoArma)]
struct DeriveTest(#[arma(default)] String, u32, bool);

fn main() {}
